--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,12 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# pyenv
+.python-version
+
+# playwright
+storage_state.json
+.vscode/settings.json
+user_data/
+2.0.1_0.crx
